fix: set z-index of loading bar

--- a/src/app/core/components/loading-bar/loading-bar.component.scss
+++ b/src/app/core/components/loading-bar/loading-bar.component.scss
@@ -2,4 +2,5 @@
   position: absolute !important;
   top: 0px;
   height: 2px !important;
+  z-index: 200;
 }
